@@ -1249,6 +1249,114 @@ This command a makefile for jde project using template generated by `jde-gen-mak
       (delete-region (point-min) (point-max))
       (jde-gen-makefile))))
 
+(defcustom jde-gen-ant-buildfile-buffer-template
+  (list
+     "\"<?xml version=\\\"1.0\\\" encoding=\\\"UTF-8\\\"?>\" 'n"
+     "\"<project name=\\\"default\\\" default=\\\"compile\\\" basedir=\\\".\\\">\" 'n"
+     "\"\" 'n"
+     "\"  <!-- If you want use ecj compiler, uncomment the next line  -->\" 'n"
+     "\"  <!--   <property name=\\\"build.compiler\\\" value=\\\"org.eclipse.jdt.core.JDTCompilerAdapter\\\"/> -->\" 'n"
+     "\"\" 'n"
+     "\"  <!-- set global properties for this build -->\" 'n"
+     "\"  <property name=\\\"src\\\"     location=\\\"\" (or (car jde-sourcepath) \"src\") \"\\\"/>\" 'n"
+     "\"  <property name=\\\"classes\\\" location=\\\"\" (if (string= jde-compile-option-directory \"\") \"classes\" jde-compile-option-directory) \"\\\"/>\" 'n"
+     "\"  <property name=\\\"pkg\\\"     location=\\\"\" jde-project-name \".jar\\\"/>\" 'n"
+     "\"  <property name=\\\"docs\\\"    location=\\\"docs\\\"/>\" 'n"
+     "\"\" 'n"
+     "\"  <property name=\\\"compile.debug\\\"       value=\\\"true\\\"/>\" 'n"
+     "\"  <property name=\\\"compile.encoding\\\"    value=\\\"\" (if (not (string= jde-compile-option-encoding \"\")) jde-compile-option-encoding) \"\\\"/>\" 'n"
+     "\"  <property name=\\\"compile.deprecation\\\" value=\\\"false\\\"/>\" 'n"
+     "\"  <property name=\\\"compile.optimize\\\"    value=\\\"true\\\"/>\" 'n"
+     "\"\" 'n"
+     "\"  <path id=\\\"compile.classpath\\\">\" 'n"
+     "\"    <pathelement path=\\\"\" (if (string= (jde-build-classpath jde-global-classpath) \"\") \".\" (jde-build-classpath jde-global-classpath)) \"\\\"/>\" 'n"
+     "\"  </path>\" 'n"
+     "\"\" 'n"
+     "\"  <target name=\\\"init\\\">\" 'n"
+     "\"    <mkdir dir=\\\"${classes}\\\"/>\" 'n"
+     "\"    <mkdir dir=\\\"${docs}\\\"/>\" 'n"
+     "\"  </target>\" 'n"
+     "\"\" 'n"
+     "\"  <target name=\\\"compile\\\" depends=\\\"init\\\" description=\\\"Compile the source\\\">\" 'n"
+     "\"    <javac srcdir=\\\"${src}\\\"\" 'n"
+     "\"           destdir=\\\"${classes}\\\"\" 'n"
+     "(if (not (string= jde-compile-option-encoding \"\")) \"           encoding=\\\"${compile.encoding}\\\"\")"
+     "(if (not (string= jde-compile-option-encoding \"\")) 'n)"
+     "\"           debug=\\\"${compile.debug}\\\"\" 'n"
+     "\"           deprecation=\\\"${compile.deprecation}\\\"\" 'n"
+     "\"           optimize=\\\"${compile.optimize}\\\">\" 'n"
+     "\"      <classpath refid=\\\"compile.classpath\\\"/>\" 'n"
+     "\"      <!-- If you want use ecj compiler ant want setting compile options,\" 'n"
+     "\"           you can uncomment the following and modify compile options\" 'n"
+     "\"      -->\" 'n"
+     "\"      <!--       <compilerarg  -->\" 'n"
+     "\"      <!--           compiler=\\\"org.eclipse.jdt.core.JDTCompilerAdapter\\\"  -->\" 'n"
+     "\"      <!--           line=\\\"-warn:+unused -Xemacs\\\"/> -->\" 'n"
+     "\"    </javac>\" 'n"
+     "\"  </target>\" 'n"
+     "\"\" 'n"
+     "\"  <target name=\\\"build\\\" depends=\\\"compile\\\"\" 'n"
+     "\"          description=\\\"Generate the distribution\\\">\" 'n"
+     "\"    <jar jarfile=\\\"${pkg}\\\" basedir=\\\"${classes}\\\"/>\" 'n"
+     "\"  </target>\" 'n"
+     "\"\" 'n"
+     "\"  <target name=\\\"clean\\\" description=\\\"Clean up\\\" >\" 'n"
+     "\"    <delete file=\\\"${build}/${pkg}\\\"/>\" 'n"
+     "\"    <delete dir=\\\"${classes}\\\"/>\" 'n"
+     "\"  </target>\" 'n"
+     "\"\" 'n"
+     "\"  <target name=\\\"rebuild\\\" depends=\\\"clean, build\\\" description=\\\"Rebuild\\\">\" 'n"
+     "\"  </target>\" 'n"
+     "\"\" 'n"
+     "\"  <target name=\\\"javadoc\\\" depends=\\\"init\\\" description=\\\"Create java doc\\\">\" 'n"
+     "\"    <javadoc destdir=\\\"${docs}\\\">\" 'n"
+     "\"      <fileset dir=\\\"${src}\\\">\" 'n"
+     "\"        <include name=\\\"**/*.java\\\"/>\" 'n"
+     "\"        <!--         <exclude name=\\\"**/*Test*\\\"/> -->\" 'n"
+     "\"      </fileset>\" 'n"
+     "\"      <classpath refid=\\\"compile.classpath\\\"/>\" 'n"
+     "\"    </javadoc>\" 'n"
+     "\"  </target>\" 'n"
+     "\"\" 'n"
+     "\"</project>   \" 'n"
+    )
+  "*Template for creating a ant buildfile for jde project.
+Setting this variable defines a template instantiation command
+`jde-gen-ant-buildfile', as a side-effect."
+  :group 'jde-gen
+  :type '(repeat string)
+  :set '(lambda (sym val)
+	  (defalias 'jde-gen-ant-buildfile
+	    (tempo-define-template
+	     "jde-ant-buildfile"
+	     (jde-gen-read-template val)
+	     nil
+	     "insert ant buildfile buffer."))
+	  (set-default sym val)))
+
+(defun jde-gen-ant-buildfile-buffer ()
+  "Create a new Makefile buffer.
+This command a makefile for jde project using template generated by `jde-gen-ant-buildfile'."
+  (interactive)
+  (let* ((default-directory
+           (file-name-directory
+            (if (string= jde-current-project "")
+                (or (jde-find-project-file ".") (expand-file-name "./prj.el"))
+              jde-current-project)))
+         (jde-ant-buildfile (or (and (boundp 'jde-ant-buildfile) jde-ant-buildfile)
+                             "build.xml"))
+         (file (read-file-name
+                (concat jde-ant-buildfile " ")
+                default-directory
+                jde-ant-buildfile)))
+    (if (file-directory-p file)
+        (setq file (concat file "/" jde-ant-buildfile)))
+    (when (or (not (file-exists-p file))
+              (yes-or-no-p "Buildfile exist, do you want to overwrite it? "))
+      (find-file file)
+      (delete-region (point-min) (point-max))
+      (jde-gen-ant-buildfile))))
+
 
 (defcustom jde-gen-buffer-templates
   (list (cons "Class" 'jde-gen-class)
